hello/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  labels:
    app: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hello
          image: 199837397765.dkr.ecr.ap-northeast-2.amazonaws.com/hello:latest
          ports:
            - containerPort: 80
