hello/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  selector:
    app: hello
  type: NodePort
  ports:
    - port: 80 # 서비스가 생성할 포트
      targetPort: 80 # 서비스가 접근할 pod의 포트
      protocol: TCP
